# rss-to-telegram-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  main.py
config/jinja_templates/: default.j2
core/: fetcher.py  models.py  monitor.py  state.py
handlers/: commands.py
processing/: __init__.py  append_text.py  base.py  content_filter.py  html_to_telegram.py  jinja_formatter.py  media_extract.py  ytdlp_downloader.py
utils/: telegram_html.py
